<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtherActivities.CreateGroup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_groupName" />

        <EditText
            android:id="@+id/newGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_group"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_groupRunner1" />

        <AutoCompleteTextView
            android:id="@+id/spinnerRunner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/hint_enter_runner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_groupRunner2" />

        <AutoCompleteTextView
            android:id="@+id/spinnerRunner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/hint_enter_runner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_groupRunner3" />

        <AutoCompleteTextView
            android:id="@+id/spinnerRunner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/hint_enter_runner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmAddGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_confirm" />

        <Button
            android:id="@+id/annulAddGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_annul" />
    </LinearLayout>

</LinearLayout>