<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <RadioGroup
                android:id="@+id/chGroupRunner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meilleur(s)" />

                <RadioButton
                    android:id="@+id/radioBtnGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_simple_groupName" />

                <RadioButton
                    android:id="@+id/radioBtnRunner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_simple_runner" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/chTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioBtnTop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioBtn_top1" />

                <RadioButton
                    android:id="@+id/radioBtnTop3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioBtn_top3" />

                <RadioButton
                    android:id="@+id/radioBtnAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioBtn_All" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_simple_competition" />

                <Spinner
                    android:id="@+id/chCompetition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_simple_passage" />

                <Spinner
                    android:id="@+id/chPassage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_simple_turn" />

                <Spinner
                    android:id="@+id/chPassagePart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:id="@+id/resultData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:orientation="horizontal"></TableLayout>

    </LinearLayout>
</ScrollView>